Added JOG rapid/feed rate
* Added UI controls for rapid and non-rapid jog positioning
* Keep moving machine if specific stuff to corresponding machine
if object.
* Added option to send msg and data to UI from machine object
* Added vscode debugging options

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "spellright.documentTypes": [
         "markdown",
         "latex",
-        "plaintext"
+        "plaintext",
+        "python"
     ]
 }
