--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,30 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Python: gsat",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/gsat.py"
+        },
+        {
+            "name": "Python: gsat-verbose",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/gsat.py",
+            "args": [
+                "-v"
+            ]
+        },
+        {
+            "name": "Python: gsat-vverbose",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/gsat.py",
+            "args": [
+                "--vv"
+            ]
+        },
+        {
             "name": "Python: Current File",
             "type": "python",
             "request": "launch",
