Start fixing queueing between threads better
* Added class to provide uniform queue mechanism between threads
* Fixed some coding style syntax issues

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,6 @@
     "spellright.documentTypes": [
         "markdown",
         "latex",
-        "plaintext",
-        "python"
+        "plaintext"
     ]
 }
