Move to using observer pattern for communication, also using python logger
* Implemented observe pattern communication between threads, this will
allow for future expansion without a lot of rewrite (that is happening
now)
* Moved away from using print for debugging now using python logger
libraries
* implemented MASK level debug this way multiple things can
independently be turned on and off, also oppose to a single verbose
and vverbose levels
* Moved away from using cmdLineOptions to check for mask, too expensive,
too many look ups. Instead set variable in gc (global context) to keep
the mask, later I will also able able to change the mask runtime...
* Started moving TinyG and Smoothie to the new way, not done yet...

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -29,6 +29,15 @@
             ]
         },
         {
+            "name": "Python: gsat-vmask",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/gsat.py",
+            "args": [
+                "--vm=machif_exec,ui"
+            ]
+        },
+        {
             "name": "Python: Current File",
             "type": "python",
             "request": "launch",
