--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,16 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Python: Current File",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/gsat-console.py",
+            "args": [
+                "-g../test.gcode",
+                "--vm=machif,serialif"
+            ]
+        },
+        {
             "name": "Python: gsat",
             "type": "python",
             "request": "launch",
