Minor fix to avoid assertion if file is missing
* Minor fix to avoid assertion if file is missing, in experimental
console mode app

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python: Current File",
+            "name": "Python: gsat-console",
             "type": "python",
             "request": "launch",
             "program": "${workspaceFolder}/gsat-console.py",
