Move to JSON config file format
* Remove need for wx.ConfigFile, now using JSON file... the continuation
to separate working threads from needing any GUI artifacts. This way
then can be used in console only mode apps
* Moved config init before UI init
* Fixed typo in machif base class, extra " in probe axis cmd
* Added code to detect init string from machif instead of relying on
firmware version, as this could happen at any time not just on initial
connect
* Clean up code that had been broken with updates long time ago, for
example if port is open and setting are changed on the port; then port
should be closed. Continuing like that would result on unknown behavior

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -44,7 +44,7 @@
             "request": "launch",
             "program": "${workspaceFolder}/gsat.py",
             "args": [
-                "--vm=machif_exec,ui"
+                "--vm=machif,ui,serialif"
             ]
         },
         {
