Added tool to convert old style config to JSON format
* Added tool to aid move to new config format
* Added ability to query version form command line --version...
* Changed MaxFiles in config to FilesMaxHistory to be consistant with
CmdMaxFileHistory

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -48,6 +48,15 @@
             ]
         },
         {
+            "name": "Python: Current File ask for args",
+            "type": "python",
+            "request": "launch",
+            "program": "${file}",
+            "args": [
+                "-c~/.gsat"
+            ]
+        },
+        {
             "name": "Python: Current File",
             "type": "python",
             "request": "launch",
