Added ability to skip gcodes * Added machine config for filter G-codes list * Changed program exec thread to handle config updates * Changed program exec thread to handle filter gcodes Moved Machine status to DRO portion * This will make it easier to see status from a distance   same as with X,Y,Z, etc status Clean up some code...

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,16 @@
 {
-    "spellright.language": "en_US",
+    "spellright.language": [
+        "en_US"
+    ],
     "spellright.documentTypes": [
         "markdown",
         "latex",
-        "plaintext"
-    ]
+        "plaintext",
+        "scminput"
+    ],
+    "spellright.parserByClass": {
+        "scminput": {
+            "parser": "plain"
+        }
+    }
 }
