--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,13 @@
         "scminput": {
             "parser": "plain"
         }
-    }
+    },
+    "cSpell.words": [
+        "EVENTIF",
+        "REMOTEIF",
+        "SERIALIF",
+        "TXDATA",
+        "gsat",
+        "machif"
+    ],
 }
