Can communicate both ways * Added functionality to send/recv both server and client * Cleanup error and peer reset connections

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,7 +15,9 @@
     },
     "cSpell.words": [
         "EVENTIF",
+        "INET",
         "REMOTEIF",
+        "REUSEADDR",
         "SERIALIF",
         "TXDATA",
         "gsat",
