Add CMDs and Events to get config data from remote * Make sure not to save config to local space when remote is open * Clean up server/client code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,10 +16,13 @@
     "cSpell.words": [
         "EVENTIF",
         "INET",
+        "MPOS",
         "REMOTEIF",
         "REUSEADDR",
+        "RXDATA",
         "SERIALIF",
         "TXDATA",
+        "datefmt",
         "gsat",
         "machif"
     ],
