Move certain bookkeeping to program exec thread * Added CMDs (GET_SW_STATE, GET_SYSTEM_INFO) * Moved progress data and run time to program exec thread * Removed progress data and run time from main UI window * Moved run time string formatting to machine UI window

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -45,7 +45,8 @@
             "request": "launch",
             "program": "${workspaceFolder}/gsat.py",
             "args": [
-                "--vm=machif,ui,serialif,remoteif,evenif"
+                "--vm=ui,ui_ev"
+                // "--vm=machif,ui,serialif,remoteif,evenif"
             ]
         },
         {
