Move some settings around

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,4 +26,7 @@
         "gsat",
         "machif"
     ],
+    "telemetry.enableCrashReporter": false,
+    "telemetry.enableTelemetry": false,
+    "terminal.integrated.inheritEnv": false,
 }
