Make more room for actual info... * remove title bar (was just taking space no use for it now) * start work on TexInput touch scroll, for now remove the annoying get stuck   on select, select all and it hangs the app * update settings for .vscode to ignore buildozer and other files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,4 +29,11 @@
     "telemetry.enableCrashReporter": false,
     "telemetry.enableTelemetry": false,
     "terminal.integrated.inheritEnv": false,
+
+    "files.watcherExclude": {
+        "**/.git/objects/**": true,
+        "**/.git/subtree-cache/**": true,
+        "**/kivy-rc/bin/**": true,
+        "**/kivy-rc/.buildozer/**": true
+      }
 }
