Initial port to Python3.x, wxPython4.x and cleanup

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,17 +14,140 @@
         }
     },
     "cSpell.words": [
+        "ABCIJKUVWXYZ",
+        "achine",
+        "addstr",
+        "AMAX",
+        "Andmm",
+        "appname",
+        "AUITOOLBAR",
+        "baudrate",
+        "BMAX",
+        "BMIN",
+        "Brea",
+        "btnsizer",
+        "bytesize",
+        "CMAX",
+        "CMIN",
+        "Colour",
+        "colourselect",
+        "COMMENTLINE",
+        "compv",
+        "compvision",
+        "coor",
+        "csel",
+        "Ctrls",
+        "datefmt",
+        "DEFHLOPQRST",
+        "DEFNAME",
+        "defsize",
+        "DGRAM",
+        "Discon",
+        "dsrdtr",
+        "EEPROM",
+        "EIGHTBITS",
+        "endwin",
+        "eset",
         "EVENTIF",
+        "feedrate",
+        "floatspin",
+        "Gcodes",
+        "genericmessagedialog",
+        "getch",
+        "gethostname",
+        "getmaxyx",
+        "Gnomovision",
+        "goitem",
+        "GPOS",
+        "gsat",
+        "gsatcomputer",
+        "HORZ",
+        "Iconize",
+        "Iconized",
         "INET",
+        "IPPROTO",
+        "keyname",
+        "Kivy",
+        "kpoint",
+        "levelname",
+        "libgtk",
+        "machif",
+        "MARGINCLICK",
+        "MCODE",
+        "mcodes",
+        "Milli",
+        "mpoa",
         "MPOS",
+        "mpox",
+        "mpoy",
+        "mpoz",
+        "mseconds",
+        "newwin",
+        "nocbreak",
+        "NODELAY",
+        "noecho",
+        "NPAGE",
+        "NUMLOCK",
+        "NUMPAD",
+        "numpy",
+        "Onmm",
+        "outc",
+        "PAGEDOWN",
+        "PAGEUP",
+        "posa",
+        "posb",
+        "posc",
+        "posx",
+        "posz",
+        "PPAGE",
+        "PRCNT",
+        "progexec",
+        "propgrid",
+        "Proxxon",
+        "pulloff",
+        "redrawwin",
         "REMOTEIF",
         "REUSEADDR",
+        "REUSEPORT",
+        "roundmm",
+        "ROUNDRECT",
+        "rtime",
+        "rtscts",
         "RXDATA",
+        "Scrollbars",
+        "scrolledpanel",
+        "scrollok",
+        "searc",
         "SERIALIF",
+        "SIGCONT",
+        "signum",
+        "STOPBITS",
+        "STYLENEEDED",
+        "subwin",
+        "SWST",
+        "swstate",
+        "Synthetos",
+        "tbicon",
+        "tdelta",
+        "tinyg",
+        "tnow",
+        "TOGGLEBUTTON",
+        "toolb",
+        "touchwin",
         "TXDATA",
-        "datefmt",
-        "gsat",
-        "machif"
+        "usec",
+        "venv",
+        "vinfo",
+        "vverbose",
+        "WOULDBLOCK",
+        "WXMAC",
+        "WXMSW",
+        "wxpg",
+        "xonxoff",
+        "XYZA",
+        "Yoyodyne",
+        "ZMAX",
+        "ZMIN"
     ],
     "telemetry.enableCrashReporter": false,
     "telemetry.enableTelemetry": false,
