--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,6 +44,7 @@
         "DGRAM",
         "Discon",
         "dsrdtr",
+        "Duembeg",
         "EEPROM",
         "EIGHTBITS",
         "endwin",
@@ -51,6 +52,7 @@
         "EVENTIF",
         "feedrate",
         "floatspin",
+        "GCODE",
         "Gcodes",
         "genericmessagedialog",
         "getch",
@@ -58,7 +60,9 @@
         "getmaxyx",
         "Gnomovision",
         "goitem",
+        "GPIO",
         "GPOS",
+        "Grbl",
         "gsat",
         "gsatcomputer",
         "HORZ",
@@ -82,6 +86,8 @@
         "mpoy",
         "mpoz",
         "mseconds",
+        "newev",
+        "newevent",
         "newwin",
         "nocbreak",
         "NODELAY",
@@ -105,6 +111,7 @@
         "propgrid",
         "Proxxon",
         "pulloff",
+        "pyserial",
         "redrawwin",
         "REMOTEIF",
         "REUSEADDR",
