* More clean up, moving from 80 to 120 columns * Got rid of most fs.FloatSpin controls that   don't seem to work well in all platforms.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,6 +68,7 @@
         "HORZ",
         "Iconize",
         "Iconized",
+        "imshow",
         "INET",
         "IPPROTO",
         "keyname",
