* Updated kivy-rc with new move to axis dialogs * Updated text for wxAPP to say move to  instead   of goto for new axis positions dialogs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,12 +18,15 @@
         "achine",
         "addstr",
         "AMAX",
+        "anchorlayout",
         "Andmm",
         "appname",
         "AUITOOLBAR",
+        "autoclass",
         "baudrate",
         "BMAX",
         "BMIN",
+        "boxlayout",
         "Brea",
         "btnsizer",
         "bytesize",
@@ -43,6 +46,7 @@
         "defsize",
         "DGRAM",
         "Discon",
+        "dropdownitem",
         "dsrdtr",
         "Duembeg",
         "EEPROM",
@@ -51,6 +55,7 @@
         "eset",
         "EVENTIF",
         "feedrate",
+        "floatlayout",
         "floatspin",
         "GCODE",
         "Gcodes",
@@ -63,20 +68,27 @@
         "GPIO",
         "GPOS",
         "Grbl",
+        "gridlayout",
         "gsat",
         "gsatcomputer",
+        "gsatrc",
         "HORZ",
         "Iconize",
         "Iconized",
         "imshow",
         "INET",
         "IPPROTO",
+        "jgcmd",
+        "jnius",
+        "jrpm",
         "keyname",
         "Kivy",
+        "kivymd",
         "kpoint",
         "levelname",
         "libgtk",
         "machif",
+        "mainthread",
         "MARGINCLICK",
         "MCODE",
         "mcodes",
@@ -87,6 +99,7 @@
         "mpoy",
         "mpoz",
         "mseconds",
+        "mult",
         "newev",
         "newevent",
         "newwin",
@@ -125,10 +138,14 @@
         "Scrollbars",
         "scrolledpanel",
         "scrollok",
+        "scrollview",
         "searc",
+        "selectioncontrol",
         "SERIALIF",
+        "setdefaults",
         "SIGCONT",
         "signum",
+        "softinput",
         "STOPBITS",
         "STYLENEEDED",
         "subwin",
@@ -145,6 +162,7 @@
         "TXDATA",
         "usec",
         "venv",
+        "viewclass",
         "vinfo",
         "vverbose",
         "WOULDBLOCK",
