Added websocket implementation * change and fixed verbose mask issues * added new settings for websocket * cleanup some code * TODO: figure out the API_TOKEN, needs new UIs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -113,12 +113,14 @@
         "Proxxon",
         "pulloff",
         "pyserial",
+        "rcws",
         "redrawwin",
         "REMOTEIF",
         "REUSEADDR",
         "REUSEPORT",
         "roundmm",
         "ROUNDRECT",
+        "rsws",
         "rtime",
         "rtscts",
         "RXDATA",
@@ -148,10 +150,12 @@
         "touchwin",
         "TXDATA",
         "usec",
+        "uvicorn",
         "venv",
         "viewclass",
         "vinfo",
         "vverbose",
+        "websockets",
         "WOULDBLOCK",
         "WXMAC",
         "WXMSW",
