* Fix issues with kivy-rc app and websockets * Fix issue with older versions of python and   f-strings with '\' in them * Clean up serial port thread check for corner   cases, where some functions can be called with   serial port equal to None * Added instructions on more dependencies for   websockets to README.md

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,6 +73,7 @@
         "kivymd",
         "kpoint",
         "levelname",
+        "levelno",
         "libgtk",
         "machif",
         "mainthread",
