* Stopped using deprecated functions from pyserial * clean up code and added some better type   checking

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "anchorlayout",
         "Andmm",
         "appname",
+        "asgi",
         "AUITOOLBAR",
         "autoclass",
         "baudrate",
@@ -38,11 +39,13 @@
         "EEPROM",
         "EIGHTBITS",
         "endwin",
+        "engineio",
         "eset",
         "EVENTIF",
         "feedrate",
         "floatlayout",
         "floatspin",
+        "gaierror",
         "GCODE",
         "Gcodes",
         "genericmessagedialog",
@@ -68,6 +71,10 @@
         "jgcmd",
         "jnius",
         "jrpm",
+        "KEEPALIVE",
+        "KEEPCNT",
+        "KEEPIDLE",
+        "KEEPINTVL",
         "keyname",
         "Kivy",
         "kivymd",
@@ -88,6 +95,7 @@
         "mpoz",
         "mseconds",
         "mult",
+        "Nagle",
         "newev",
         "newevent",
         "newwin",
